--- a/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
+++ b/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h2 class="font-extrabold">Colores</h2>
+  <!-- <h2 class="font-extrabold">Colores</h2>
   <h2 class="bg-lime-600">Tailwindcss</h2>
   <h2 class="bg-lime-700">en</h2>
   <h2 class="bg-lime-800">CodingTube</h2>
@@ -49,6 +49,40 @@
       <input disabled class="border border-gray-300 w-full px-3 py-2 rounded-md disabled:bg-red-200 disabled:text-white" type="password" placeholder="Password">
       <input class="bg-blue-400 text-white w-full py-2 rounded-md cursor-pointer hover:bg-blue-500" type="submit" value="Ingresar">
     </form>
+  </div> -->
+
+  <!-- <h2 class="font-extrabold">Pseudo clases</h2>
+  <div class="p-4">
+    <button class="bg-orange-600 w-32 p-3 rounded-md relative after:content-['Hola'] after:absolute after:top-0 after:text-orange-200">:after</button>
+    <button class="bg-purple-600 w-32 p-3 rounded-md relative after:content-[''] after:absolute after:left-32 after:border-8 after:border-l-purple-600 after:border-transparent after:top-4">:after</button>
+  </div>
+  <div class="p-4">
+    <input class="border ml-2 p-2 placeholder:text-orange-500 placeholder:italic" type="text" placeholder="Placeholder">
+    <input class="file:bg-violet-100 file:border-0 file:rounded-lg file:text-violet-700 file:font-semibold file:px-12 hover:file:bg-violet-300 file:transition-colors file:duration-300" type="file">
+  </div>
+  <div class="p-4">
+    <ul class="list-disc ml-6 marker:text-red-500">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+  </div>
+  <div class="p-4">
+    <ol class="list-decimal ml-6 marker:text-red-500 marker:font-bold">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ol>
+  </div>
+  <div class="p-4">
+    <p class="first-letter:uppercase first-letter:text-7xl first-letter:font-bold first-letter:mr-3 first-letter:float-left">
+      firts <code>"first-letter:" and "firsr-line:"</code> ipsum dolor sit amet consectetur adipisicing elit. Laboriosam inventore officiis odio totam illum aut laudantium suscipit, repellat vel. Veritatis recusandae dolore similique voluptatum nisi sunt facilis nemo hic ullam.
+    </p>
+  </div> -->
+  
+  <div class="border-2 border-black p-6 w-80 mx-auto mt-10 sm:bg-amber-200 md:bg-rose-200  talet:bg-purple-200 lg:bg-cyan-200 xl:bg-green-200 2xl:bg-neutral-900 2xl:text-white">
+    <h2 class="font-bold italic text-cyan-400 text-xl">Resposive Design</h2>
+    <p class="mt-4 after:content-['mobile'] sm:after:content-['640px'] md:after:content-['768px'] talet:after:content-['tablet900px'] lg:after:content-['1024px'] xl:after:content-['1280px'] 2xl:after:content-['1440px']">Tailwindcss: </p>
   </div>
 
 
