--- a/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
+++ b/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
@@ -80,10 +80,48 @@
     </p>
   </div> -->
   
-  <div class="border-2 border-black p-6 w-80 mx-auto mt-10 sm:bg-amber-200 md:bg-rose-200  talet:bg-purple-200 lg:bg-cyan-200 xl:bg-green-200 2xl:bg-neutral-900 2xl:text-white">
+  <!-- <div class="border-2 border-black p-6 w-80 mx-auto mt-10 sm:bg-amber-200 md:bg-rose-200  talet:bg-purple-200 lg:bg-cyan-200 xl:bg-green-200 2xl:bg-neutral-900 2xl:text-white">
     <h2 class="font-bold italic text-cyan-400 text-xl">Resposive Design</h2>
     <p class="mt-4 after:content-['mobile'] sm:after:content-['640px'] md:after:content-['768px'] talet:after:content-['tablet900px'] lg:after:content-['1024px'] xl:after:content-['1280px'] 2xl:after:content-['1440px']">Tailwindcss: </p>
   </div>
+
+  <h2 class="font-extrabold py-2">Flexbox</h2>
+  <div class="flex flex-row-reverse border-2 border-indigo-800 h-[600px]">
+    <div class="card">1</div>
+    <div class="card self-center">2</div>
+    <div class="card self-end">3</div>
+  </div> -->
+
+  <!-- <h3>Flex Wrap</h3>
+  <div class="py-4 flex flex-wrap gap-4">
+    <div class="card grow shrink-0">1</div>
+    <div class="card grow">2</div>
+    <div class="card grow">3</div>
+    <div class="card grow">4</div>
+    <div class="card grow">5</div>
+    <div class="card grow">6</div>
+  </div> -->
+
+  <h3 class="py-4">Basis</h3>
+  <div class="py4 flex gap-4">
+    <div class="card basis-1/4">25%</div>
+    <div class="card basis-1/4">25%</div>
+    <div class="card basis-1/2">50%</div>
+  </div>
+
+  <h2 class="font-extrabold py-4">Grid</h2>
+  <div class="grid grid-cols-12 gap-4">
+    <div class="card col-span-2">1</div>
+    <div class="card">2</div>
+    <div class="card">3</div>
+    <div class=" row-span-3 ">4</div>
+    <div class="card col-span-2">5</div>
+    <div class="card row-span-3">6</div>
+    <div class="card col-start-2 col-end-4">7</div>
+    <div class="card col-start-2 col-span-2">8</div>
+    <div class="card col-[2/5]">9</div>
+  </div>
+
 
 
 </body>
