--- a/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
+++ b/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -102,28 +102,38 @@
     <div class="card grow">6</div>
   </div> -->
 
-  <h3 class="py-4">Basis</h3>
-  <div class="py4 flex gap-4">
+  <!-- <h3 class="py-4">Basis</h3>
+  <div class="flex gap-4">
     <div class="card basis-1/4">25%</div>
     <div class="card basis-1/4">25%</div>
     <div class="card basis-1/2">50%</div>
-  </div>
+  </div> -->
 
-  <h2 class="font-extrabold py-4">Grid</h2>
+  <!-- <h2 class="font-extrabold py-4">Grid</h2>
   <div class="grid grid-cols-12 gap-4">
     <div class="card col-span-2">1</div>
     <div class="card">2</div>
     <div class="card">3</div>
-    <div class=" row-span-3 ">4</div>
+    <div class="card row-span-3 ">4</div>
     <div class="card col-span-2">5</div>
     <div class="card row-span-3">6</div>
     <div class="card col-start-2 col-end-4">7</div>
     <div class="card col-start-2 col-span-2">8</div>
     <div class="card col-[2/5]">9</div>
-  </div>
+  </div> -->
 
+  <!-- <div class="grid grid-cols-2 gap-4 h-screen">
+    <div class="card col-[1/2]">header</div>
+    <div class="card col-span-2">nav</div>
+    <div class="card row-span-2 col-start-2">section</div>
+    <div class="card">article</div>
+    <div class="card">aside</div>
+    <div class="card col-span-2">footer</div>
+  </div> -->
 
+  <div class="h-80 w-80 dark:bg-slate-900"></div>
+  <button id="darkmode" class="p-2 bg-cyan-500 rounded-sm dark:text-white">Dark Mode</button>
 
+  <script src="./main.js"></script>
 </body>
-
 </html>
