--- a/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
+++ b/1 Responsive Web Design/2 CSS3/tailwindcss/src/index.html
@@ -131,6 +131,7 @@
     <div class="card col-span-2">footer</div>
   </div> -->
 
+  <!-- DARK MODE -->
   <div class="h-80 w-80 dark:bg-slate-900"></div>
   <button id="darkmode" class="p-2 bg-cyan-500 rounded-sm dark:text-white">Dark Mode</button>
 
